# ranktag-website

./: .env.example  .gitignore  README.md  VERCEL_DEPLOY.md  docker-compose.yml  frontend.Dockerfile  index.html  package-lock.json  package.json  vercel.json  vite.config.js
_legacy/: audit.html  convert.mjs  index.html  roi-calculator.html  technical-audit.html  wrap.mjs
api/: authority.js  backlinks.js  blog-page.js  competitor-analyze.js  density-url.js  health.js  index.py  keyword-density.js  llm-info.js  not-found.js  page-speed.js  requirements.txt  rss.js  sitemap.js
backend/: .env.example  Dockerfile  run.py  (+2 more)
seo-suite/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
seo-suite/backend/alembic/: env.py
seo-suite/backend/app/: __init__.py  main.py
seo-suite/backend/app/api/: __init__.py  deps.py
seo-suite/backend/app/api/v1/: __init__.py  router.py
seo-suite/backend/app/api/v1/endpoints/: __init__.py  health.py
seo-suite/backend/app/cache/: __init__.py  redis_client.py
seo-suite/backend/app/config/: __init__.py  settings.py
seo-suite/backend/app/core/: __init__.py  exceptions.py  lifecycle.py  logging.py  security.py
seo-suite/backend/app/crawlers/: __init__.py  base.py  frontier.py  http_fetcher.py  parser.py  playwright_renderer.py  politeness.py  retry.py  scrapy_runner.py  user_agents.py
seo-suite/backend/app/database/: __init__.py  base.py  bulk.py  ch_client.py  engine.py  router.py  session.py
seo-suite/backend/app/middleware/: __init__.py  rate_limit.py  request_id.py  security_headers.py  timing.py
seo-suite/backend/app/models/: __init__.py
seo-suite/backend/app/schemas/: __init__.py  common.py
seo-suite/backend/app/services/: __init__.py
seo-suite/backend/app/utils/: __init__.py  tld.py  url.py
seo-suite/backend/app/workers/: __init__.py  aggregator_tasks.py  alert_tasks.py  beat_schedule.py  celery_app.py  crawler_tasks.py  metrics_tasks.py  queues.py
seo-suite/backend/deployments/postgres/: statefulset.yaml
seo-suite/backend/docs/api/: API_ARCHITECTURE.md
seo-suite/backend/docs/architecture/: BACKEND_FOUNDATION.md  CACHE_ARCHITECTURE.md  QUEUE_AND_WORKER_ARCHITECTURE.md
seo-suite/backend/docs/crawler/: CRAWLER_ARCHITECTURE.md
seo-suite/backend/docs/database/: POSTGRES_SETUP.md
seo-suite/backend/docs/deployment/: SCALABILITY_ARCHITECTURE.md
seo-suite/backend/requirements/: base.txt  crawler.txt
seo-suite/backend/scripts/: start-api.sh  start-beat.sh  start-worker.sh  wait-for.sh
seo-suite/backend/tests/: conftest.py  test_health.py
(+219 files in other folders)
